# Course-project-Search-for-vacancies-

./: README.md  config.py  main.py  pyproject.toml  utils.py
api/: connector.py  exceptions.py
data/: data_vacancies.json
database/: json_processing.py
src/: moduls.py
tests/: test_connector.py  test_json.json  test_json_processing.py  test_vacancy.py
vecancy_worcer/: vecancy.py
